# interview_kit

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  PLAN.md  README.md  SCOPE.md  pyproject.toml
docs/: integration.md
examples/: join_page.html  local_voice.py  simulated.py
src/interview_kit/: __init__.py  cli.py  engine.py  livekit_config.py  protocols.py
src/interview_kit/examples/: __init__.py  simulated.py
src/interview_kit/llm/: __init__.py  anthropic.py  prompts.py  schemas.py
src/interview_kit/loop/: __init__.py  extract.py  heuristics.py  openings.py  phrasing.py  resume.py  runner.py  selection.py
src/interview_kit/sinks/: logging.py  memory.py  webhook.py
src/interview_kit/stores/: memory.py  sqlite.py
src/interview_kit/testing/: fake_llm.py  simulators.py
src/interview_kit/types/: config.py  events.py  runtime.py
src/interview_kit/voice/: __init__.py  livekit_entry.py
src/interviewer/: __init__.py  cli.py  engine.py  protocols.py
src/interviewer/examples/: __init__.py  simulated.py
src/interviewer/llm/: __init__.py  anthropic.py  prompts.py
src/interviewer/loop/: extract.py  heuristics.py  phrasing.py  resume.py  runner.py  selection.py
src/interviewer/sinks/: logging.py  memory.py  webhook.py
src/interviewer/stores/: memory.py  sqlite.py
src/interviewer/testing/: __init__.py  fake_llm.py  simulators.py
src/interviewer/types/: config.py  events.py  runtime.py  state.py
src/interviewer/voice/: __init__.py  livekit_entry.py
tests/: test_cli.py  test_engine_defaults.py  test_engine_methods.py  test_smoke.py
tests/fixtures/: cli_simulate.yaml
tests/integration/: conftest.py  test_full_loop.py
tests/llm/: test_anthropic.py  test_prompts.py  test_schemas.py
tests/loop/: test_extract.py  test_phrasing.py  test_runner_clarify.py  test_runner_happy_path.py  test_runner_refusal.py  test_runner_resume.py  test_runner_unhappy.py  test_selection.py
tests/sinks/: test_logging_sink.py  test_memory_sink.py  test_webhook_sink.py
tests/stores/: _round_trip.py  test_memory_store.py  test_sqlite_store.py
tests/types/: test_config.py  test_conversation_loader.py  test_runtime.py
tests/voice/: test_livekit_entry.py
