[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interviewer"
version = "0.0.1"
description = "Adaptive voice-interview engine."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "interviewer authors" }]
dependencies = [
    "pydantic>=2,<3",
    "anthropic>=0.40,<1.0",
]

[project.optional-dependencies]
voice = [
    "livekit-agents[deepgram,cartesia,silero]>=1.0,<2",
    "livekit-api>=1.0,<2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
    "livekit-agents>=1.0,<2",
    "livekit-api>=1.0,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/interviewer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["livekit.*"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["interviewer.voice.*"]
# voice/* subclasses livekit-agents framework classes; with
# follow_imports=skip on livekit.*, those bases resolve to Any.
disallow_subclassing_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
