[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interview-kit"
version = "0.2.0"
description = "Adaptive voice-interview engine."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "szijderveld", email = "szijderveld9@gmail.com" }]
keywords = ["interview", "voice-agent", "livekit", "anthropic", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2,<3",
    "anthropic>=0.40,<1.0",
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pyyaml>=6,<7",
]

[project.scripts]
interviewer = "interviewer.cli:main"

[project.urls]
Homepage = "https://github.com/szijderveld/interviewer"
Documentation = "https://github.com/szijderveld/interviewer/blob/main/docs/integration.md"
Issues = "https://github.com/szijderveld/interviewer/issues"
Changelog = "https://github.com/szijderveld/interviewer/blob/main/CHANGELOG.md"
Source = "https://github.com/szijderveld/interviewer"

[project.optional-dependencies]
voice = [
    "livekit-agents[deepgram,cartesia,silero]>=1.0,<2",
    "livekit-api>=1.0,<2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
    "livekit-agents>=1.0,<2",
    "livekit-api>=1.0,<2",
    "types-PyYAML>=6,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/interviewer"]

[tool.uv]
required-environments = ["sys_platform == 'darwin' and platform_machine == 'arm64'"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["livekit.*"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["interviewer.voice.*"]
# voice/* subclasses livekit-agents framework classes; with
# follow_imports=skip on livekit.*, those bases resolve to Any.
disallow_subclassing_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
