[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interview_kit"
version = "0.3.0"
description = "Adaptive voice-interview engine."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "szijderveld", email = "szijderveld@gmail.com" }]
keywords = ["interview", "voice-agent", "livekit", "anthropic", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2,<3",
    "anthropic>=0.40,<1.0",
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pyyaml>=6,<7",
]

[project.scripts]
interview_kit = "interview_kit.cli:main"

[project.urls]
Homepage = "https://github.com/szijderveld/interview_kit"
Documentation = "https://github.com/szijderveld/interview_kit/blob/main/docs/integration.md"
Issues = "https://github.com/szijderveld/interview_kit/issues"
Changelog = "https://github.com/szijderveld/interview_kit/blob/main/CHANGELOG.md"
Source = "https://github.com/szijderveld/interview_kit"

[project.optional-dependencies]
voice = [
    "livekit-agents[deepgram,cartesia,silero]>=1.0,<2",
    "livekit-api>=1.0,<2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
    "livekit-agents>=1.0,<2",
    "livekit-api>=1.0,<2",
    "types-PyYAML>=6,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/interview_kit"]

[tool.uv]
required-environments = ["sys_platform == 'darwin' and platform_machine == 'arm64'"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["livekit.*"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["interview_kit.voice.*"]
# voice/* subclasses livekit-agents framework classes; with
# follow_imports=skip on livekit.*, those bases resolve to Any.
disallow_subclassing_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
